<resources>
    <string name="app_name">c-beam</string>
    <string name="title_missions">missionen</string>
    <string name="title_c_ontrol">c-ontrol</string>
    <string name="title_events">events</string>
    <string name="title_artefacts">artefacte</string>
    <string name="title_c_portal">c-portal</string>
    <string name="title_users">an bord</string>
    <string name="title_stats">stats</string>
    <string name="title_activity">activitylog</string>
    <string name="title_section0">an bord</string>
    <string name="title_c_portal_section0">article view</string>
    <string name="title_c_portal_section1">article</string>
    <string name="title_c_portal_section2">groups</string>
    <string name="title_c_portal_section3">users</string>
    <string name="title_c_portal_section4">tags</string>
    <string name="title_map_section0">u:berblicc</string>
    <string name="title_map_section1"></string>
    <string name="title_map_section2"></string>
    <string name="title_map_section3"></string>
    <string name="title_map_section4"></string>
    <string name="hello_world">c-beam</string>
    <string name="title_notification_mission">missionen</string>
    <string name="title_notification_boarding">boarding</string>
    <string name="title_notification_eta">ETA</string>
    <string name="menu_settings">einstellungen</string>
    <string name="title_activity_user">member</string>
    <string name="title_activity_mission">c-mission</string>
    <string name="title_activity_event">events</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="title_activity_settings">einstellungen</string>
    <string name="pref_push_settings">push-einstellungen</string>
    <string name="pref_username">benutzername</string>
    <string name="pref_username_summ">dein c-base membername</string>
    <string name="pref_push_summ">push-nachrichten aktivieren (now boarding, ETA)</string>
    <string name="pref_push">push</string>
    <string name="pref_push_missions_summ">push-nachrichten fu:r missionen activieren</string>
    <string name="pref_push_missions">push missions</string>
    <string name="pref_push_boarding_summ">push-nachrichten fu:r boarding activieren</string>
    <string name="pref_push_boarding">push boarding</string>
    <string name="pref_push_eta_summ">push-nachrichten fu:r ETA activieren</string>
    <string name="pref_push_eta">push ETA</string>
    <string name="pref_display_ap">AP anzeigen</string>
    <string name="pref_display_ap_summ"></string>
    <string name="c_beam_rpc_url">http://c-beam.cbrp3.c-base.org:4254/rpc/</string>
    <string name="menu_login">einloggen</string>
    <string name="menu_logout">ausloggen</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="offline">nicht an bord</string>
    <string name="online">an bord</string>
    <string name="button_mission_start">mission starten</string>
    <string name="button_mission_end">mission beenden</string>
    <string name="button_tts">c_out</string>
    <string name="appwidget_prefix_default">c-beam</string>
    <string name="title_activity_c_out">c_out</string>
    <string name="menu_c_out">c_out</string>
    <string name="menu_ccorder">c-corder</string>
    <string name="menu_map">maps</string>
    <string name="c_out_sound_played">cound wurde abgespielt</string>
    <string name="title_activity_web">c-browser</string>
    <string name="title_activity_artefact">cbag3</string>
    <string name="title_activity_artefact_long">c-base artefact guide 3</string>
    <string name="title_activity_c_portal">c-portal</string>
    <string name="title_activity_bam">BÄM!</string>
    <string name="confirm_login">wirklich einloggen?</string>
    <string name="button_login">einloggen</string>
    <string name="button_cancel">abbrechen</string>
    <string name="message_logout">du wirst ausgelogt, bitte warten…</string>
    <string name="confirm_logout">wirklich ausloggen?</string>
    <string name="button_logout">ausloggen</string>
    <string name="confirm_mission_start">mission wirklich starten?</string>
    <string-array name="fonts_array">
        <item>Android Default</item>
        <item>X-Scale</item>
        <item>Ceva</item>
    </string-array>
    <string-array name="fontsize_array">
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
    </string-array>
    <string-array name="mission_result_array">
        <item>mission erfolgreich</item>
        <item>mission abgebrochen</item>
        <item>huch, verklickt!</item>
    </string-array>
    <string-array name="login_choices_array">
        <item>anmelden</item>
        <item>abmelden</item>
        <item>abbrechen</item>
    </string-array>
    <string name="pref_font_summ">schriftart</string>
    <string name="pref_font">schriftart der app auswählen</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_map">c-maps</string>
    <string name="pref_fade_users_summ">verblassen entspricht der wahrscheinlichkeit, dass sich
        $member noch an bord befindet
    </string>
    <string name="pref_fade_users">membernamen verblassen</string>
    <string name="pref_c_theme_summ"></string>
    <string name="pref_c_theme">c-theme aktivieren</string>
    <string name="tts">TTS</string>
    <string name="button_announce">announce</string>
    <string name="label_play_sound">c_out cound abspielen:</string>
    <string name="button_r2d2">r2d2</string>
    <string name="label_enter_text">text eingeben:</string>
    <string name="button_lift_off">abheben</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_section3">earthmap</string>
    <string name="title_section2">overview</string>
    <string name="title_section1">interfaces</string>
    <string name="pref_password">passwort</string>
    <string name="pref_password_summ">Your c-base member password</string>
    <string name="title_activity_ccorder">c-corder</string>
    <string name="set_username_title">benutzername setzen</string>
    <string name="set_username_message">bitte setze den benutzernamen auf deinen membernamen!
    </string>
    <string name="not_in_crew_network">nicht im crew-netz</string>
    <string name="self_destruct_thx">danke für den fisch.</string>
    <string name="self_destruct_in_progress">erde wird abgesprengt, bitte warten…</string>
    <string name="lift_off_title">we need to lift off…</string>
    <string name="lift_off_message">there\'s no time to explain!</string>
    <string name="button_ok">OK</string>
    <string name="button_oops">huch, verklickt</string>
    <string name="action_settings">einstellungen</string>
    <string name="pref_stats_enabled">c-game aktiv</string>
    <string name="pref_stats_enabled_summ">legt fest, ob AP für missionen gesammelt werden sollen.
    </string>
    <string name="title_activity_mission_detail">c-mission</string>
    <string name="menu_c_mission">c-mission</string>
    <string name="menu_ab_out">ab_out</string>
    <string name="confirm_log_activity">soll die activita:t wirklich geloggt werden?</string>
    <string name="button_c_mission">c-mission</string>
    <string name="button_c_maps">c-maps</string>
    <string name="label_about">about</string>
    <string name="about_text">
        <![CDATA[
		<p>
		<strong>c-beam</strong> v%s<br>
		by smile, cketti, keyboardsurfer, ligi ät c-base.org
		</p><p>
		The source code was released under the WTFPL, Version 2.0 and is available here:<br>
		<a href="https://github.com/c-base/c-beam-droid">https://github.com/c-base/c-beam-droid</a>
		</p>
		<p></p>
		<p>
		c-corder scan sound: <a href="http://www.freesound.org/people/jobro/sounds/33789/">5 beep c.wav</a> CC-BY jobro
		</p>
		]]>
    </string>
    <string name="title_activity_notification">benachrichtigungen</string>
    <string name="button_delete_notifications">alle nachrichten lo:schen</string>
    <string name="confirm_delete_notifications">wirklich alle nachrichten lo:schen?</string>
    <string name="menu_c_corder">c-corder</string>
    <string name="no_events">fu:r heute sind keine events eingetragen</string>
    <string name="c_corder_warning_title">c-corder reconstruction beta</string>
    <string name="c_corder_warning_text">
        <![CDATA[
		<p>der c-corder befindet sich noch in der fru:hen betaphase der reconstruction und unterstu:tct 
		viele der urpsru:nglichen functionen noch nicht.</p>
		<p><font color=\"red\">die wichtigste function ist aber bereits implementiert: leersaugen des accus.</font></p>
		<p>dance fu:r die beachtung der sicherheitshinweise.</p>
		]]>
    </string>
    <string name="pref_expert_settings">debug</string>
    <string name="pref_debug_enabled">debug-modus</string>
    <string name="pref_debug_enabled_summ">schaltet zusa:tzliches funktionen fu:rs debugging ein
    </string>
    <string name="pref_c_beam_url">c-beam url</string>
    <string name="pref_c_beam_url_summ">diese einstellung sollte nur vera:ndert werden, wenn man
        weiss, was man tut.
    </string>
    <string name="pref_default_eta">ETA</string>
    <string name="pref_default_eta_summ">standardeinstellung für den ETA in minuten</string>
    <string name="confirm_eta">ETA wird auf %s gesetzt.</string>
    <string name="confirm_reset_eta">ETA wird gelo:scht.</string>
    <string name="eta_failure">fehler beim setzen des ETA. bitte versuchen sie es spa:ter noch
        einmal.
    </string>
    <string name="eta_set">ETA wurde erfolgreich gesetzt.</string>
    <string name="eta_removed">ETA wurde erfolgreich entfernt.</string>
    <string name="button_set_eta">ETA setzen</string>
    <string name="button_reset_eta">ETA lo:schen</string>
    <string name="button_show_controls">c-ontrols anzeigen</string>
    <string name="button_creactiv">creactiv</string>
    <string name="button_core">core</string>
    <string name="button_com">com</string>
    <string name="button_culture">culture</string>
    <string name="button_cience">cience</string>
    <string name="button_carbon">carbon</string>
    <string name="button_clamp">clamp</string>
    <string name="button_expand"></string>
    <string name="button_collapse"></string>
    <string name="interface_map_url">https://c-beam.cbrp3.c-base.org/c-base-map/</string>
    <string name="blueprint_map_url">http://smile.crew.c-base.org/basemap/</string>
    <string name="google_map_url">
        <![CDATA[https://maps.google.de/maps?q=c-base&hl=de&cid=10710432516262848279&gl=DE&t=m&z=16&iwloc=A]]></string>
    <string name="title_activity_core">core</string>
    <string name="title_activity_com">com</string>
    <string name="title_activity_cience">cience</string>
    <string name="title_activity_clamp">clamp</string>
    <string name="title_activity_carbon">carbon</string>
    <string name="title_activity_creactiv">creactiv</string>
    <string name="title_activity_culture">culture</string>
    <string name="title_activity_ring">c-beam</string>
    <string name="memberinterface_url">https://member.cbrp3.c-base.org</string>
    <string name="title_core_section1">c-ontrol</string>
    <string name="title_core_section2">memberinterface</string>
    <string name="title_clamp_section1">c_nittstellen</string>
    <string name="title_clamp_section2">artefacte</string>
    <string name="title_clamp_section3">carte</string>
    <string name="title_clamp_section4">terra</string>
    <string name="www_cbo_url">http://www.c-base.org</string>
    <string name="title_clamp_section5">www</string>
    <string name="title_carbon_section1">an bord</string>
    <string name="activitylogger_input_activity">activita:t</string>
    <string name="activitylogger_label_ap">AP:</string>
    <string name="activitylogger_button_log_activity">loggen</string>
</resources>