<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="bernd"
        android:key="pref_username"
        android:summary="@string/pref_username_summ"
        android:title="@string/pref_username" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_push"
        android:summary="@string/pref_push_summ"
        android:title="@string/pref_push" />

    <PreferenceScreen
        android:key="pref_push_settings"
        android:persistent="false"
        android:title="@string/pref_push_settings" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_push_missions"
            android:summary="@string/pref_push_missions_summ"
            android:title="@string/pref_push_missions" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_push_boarding"
            android:summary="@string/pref_push_boarding_summ"
            android:title="@string/pref_push_boarding" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_push_eta"
            android:summary="@string/pref_push_eta_summ"
            android:title="@string/pref_push_eta" />
    </PreferenceScreen>

    <EditTextPreference
        android:defaultValue="30"
        android:key="pref_default_eta"
        android:numeric="integer"
        android:summary="@string/pref_default_eta_summ"
        android:title="@string/pref_default_eta" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_stats_enabled"
        android:summary="@string/pref_stats_enabled_summ"
        android:title="@string/pref_stats_enabled" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_display_ap"
        android:summary="@string/pref_display_ap_summ"
        android:title="@string/pref_display_ap" />

    <!--
    <EditTextPreference
        android:enabled="false"
        android:inputType="textPassword"
        android:key="pref_password"
        android:summary="@string/pref_password_summ"
        android:title="@string/pref_password" />
    
    <EditTextPreference
        android:defaultValue="X-Scale"
        android:key="pref_font"
        android:summary="@string/pref_font_summ"
        android:title="@string/pref_font" />
    -->
    <ListPreference
        android:defaultValue="@string/pref_font_default"
        android:dialogTitle="Font"
        android:entries="@array/fonts_array"
        android:entryValues="@array/fonts_array"
        android:key="pref_font"
        android:title="Font" />
    <ListPreference
        android:defaultValue="20"
        android:dialogTitle="Font Size"
        android:entries="@array/fontsize_array"
        android:entryValues="@array/fontsize_array"
        android:key="pref_fontsize"
        android:title="Font Size" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_c_theme"
        android:summary="@string/pref_c_theme_summ"
        android:title="@string/pref_c_theme" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_fade_users"
        android:summary="@string/pref_fade_users_summ"
        android:title="@string/pref_fade_users" />

    <PreferenceScreen
        android:key="pref_expert_settings"
        android:persistent="false"
        android:title="@string/pref_expert_settings" >
        <EditTextPreference
            android:defaultValue="http://c-beam.cbrp3.c-base.org:4254/rpc/"
            android:key="pref_c_beam_url"
            android:summary="@string/pref_c_beam_url_summ"
            android:title="@string/pref_c_beam_url" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_debug_enabled"
            android:summary="@string/pref_debug_enabled_summ"
            android:title="@string/pref_debug_enabled" />
    </PreferenceScreen>

</PreferenceScreen>